crates/squawk_lexer/src/snapshots/squawk_lexer__tests__block_comment.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: result
---
[
    "\n" @ Whitespace,
    "/*\n * foo\n * bar\n*/" @ BlockComment { terminated: true },
]
