crates/squawk_lexer/src/snapshots/squawk_lexer__tests__block_comment_unterminated.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: result
---
[
    "\n" @ Whitespace,
    "/*\n * foo\n * bar\n /*\n*/" @ BlockComment { terminated: false },
]
