crates/squawk_lexer/src/snapshots/squawk_lexer__tests__floats.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: "lex(r#\"\n4664.E+5\n4664E+5\n4664E5\n4664e5\n        \"#)"
---
[
    "\n" @ Whitespace,
    "4664.E+5" @ Literal { kind: Float { base: Decimal, empty_exponent: false } },
    "\n" @ Whitespace,
    "4664E+5" @ Literal { kind: Float { base: Decimal, empty_exponent: false } },
    "\n" @ Whitespace,
    "4664E5" @ Literal { kind: Float { base: Decimal, empty_exponent: false } },
    "\n" @ Whitespace,
    "4664e5" @ Literal { kind: Float { base: Decimal, empty_exponent: false } },
    "\n        " @ Whitespace,
]
