crates/squawk_lexer/src/snapshots/squawk_lexer__tests__lex_statement.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: result
---
[
    "select" @ Ident,
    " " @ Whitespace,
    "1" @ Literal { kind: Int { base: Decimal, empty_int: false, trailing_junk_start: 1 } },
    ";" @ Semi,
]
