crates/squawk_lexer/src/snapshots/squawk_lexer__tests__line_comment.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: result
---
[
    "\n" @ Whitespace,
    "-- foooooooooooo bar buzz" @ LineComment,
    "\n" @ Whitespace,
]
