crates/squawk_lexer/src/snapshots/squawk_lexer__tests__numeric_with_seperators.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: "lex(r#\"\n1_500_000_000\n0b10001000_00000000\n0o_1_755\n0xFFFF_FFFF\n1.618_034\n\"#)"
---
[
    "\n" @ Whitespace,
    "1_500_000_000" @ Literal { kind: Int { base: Decimal, empty_int: false, trailing_junk_start: 13 } },
    "\n" @ Whitespace,
    "0b10001000_00000000" @ Literal { kind: Int { base: Binary, empty_int: false, trailing_junk_start: 19 } },
    "\n" @ Whitespace,
    "0o_1_755" @ Literal { kind: Int { base: Octal, empty_int: false, trailing_junk_start: 8 } },
    "\n" @ Whitespace,
    "0xFFFF_FFFF" @ Literal { kind: Int { base: Hexadecimal, empty_int: false, trailing_junk_start: 11 } },
    "\n" @ Whitespace,
    "1.618_034" @ Literal { kind: Numeric { base: Decimal, empty_exponent: false, trailing_junk_start: 9 } },
    "\n" @ Whitespace,
]
