crates/squawk_lexer/src/snapshots/squawk_lexer__tests__psql_command_quotes_without_escapes.snap
---
source: crates/squawk_lexer/src/lib.rs
expression: "lex(r#\"\\echo \"C:\\\" \\\\ select 1;\n\\echo `echo a\\` \\\\ select 2;\"#)"
---
[
    "\\echo \"C:\\\" " @ PsqlCommand { ends_query: false },
    "\\\\" @ PsqlCommand { ends_query: false },
    " " @ Whitespace,
    "select" @ Ident,
    " " @ Whitespace,
    "1" @ Literal { kind: Int { base: Decimal, empty_int: false, trailing_junk_start: 1 } },
    ";" @ Semi,
    "\n" @ Whitespace,
    "\\echo `echo a\\` " @ PsqlCommand { ends_query: false },
    "\\\\" @ PsqlCommand { ends_query: false },
    " " @ Whitespace,
    "select" @ Ident,
    " " @ Whitespace,
    "2" @ Literal { kind: Int { base: Decimal, empty_int: false, trailing_junk_start: 1 } },
    ";" @ Semi,
]
